kubernetes/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: 
    type: deployment-ms-hw-4
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '80'
spec:
  replicas: 3
  selector:
      matchLabels:
        release: prom
  template:
    metadata:
      labels:
        release: prom
    spec:
      containers:
        - name: ms-hw-4-app
          image: kpolyanichko/ms-hw-4-amd64:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: app-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '80'
spec:
  selector:
    app: app-service
    release: prom
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
